k8s-reference/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopdeploy
  labels:
    app: shopdeploy
    environment: production
