k8s-reference/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: shopdeploy
  labels:
    app: shopdeploy
    component: backend
spec:
  type: ClusterIP
  selector:
    app: shopdeploy
    component: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
