k8s-reference/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: shopdeploy
  labels:
    app: shopdeploy
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: shopdeploy
    component: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
